# rpg-dice-roller

./: Cargo.toml  LICENSE  README.md
benches/: parsing.rs
src/: lib.rs  main.rs  parse.rs  roll.rs
src/evaluate/: dice_roll.rs  expression.rs  group_rolls.rs  mod.rs  roll.rs
src/parse/: dice.rs  expression.rs  mod.rs
tests/: single_dice_rolls_test.rs
