[package]
name = "rpg-dice-roller"
description = "A crate to roll dice with modifiers and apply expressions to them."
authors = ["Riccardo Fano"]
version = "0.1.1"
edition = "2021"
repository = "https://github.com/riccardofano/rpg-dice-roller"
readme = "README.md"
license-file = "LICENSE"
keywords = ["dice", "dice-roller", "roll", "rpg", "dungeons-and-dragons"]

[dependencies]
rand = "0.8.5"
winnow = "0.6.20"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "parsing"
harness = false
